--- a/samples/eShopLite/eShopLite.ServiceDefaults/eShopLite.ServiceDefaults.csproj
+++ b/samples/eShopLite/eShopLite.ServiceDefaults/eShopLite.ServiceDefaults.csproj
@@ -24,4 +24,8 @@
     <PackageReference Include="Grpc.Net.ClientFactory" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ServiceDiscoveryClient\ServiceDiscoveryClient.csproj" />
+  </ItemGroup>
+
 </Project>
