--- a/samples/eShopLite/eShopLite.ServiceDefaults/eShopLite.ServiceDefaults.csproj
+++ b/samples/eShopLite/eShopLite.ServiceDefaults/eShopLite.ServiceDefaults.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="AspNetCore.HealthChecks.Uris" />
     <PackageReference Include="Grpc.HealthCheck" />
     <PackageReference Include="Grpc.Net.ClientFactory" />
+    <PackageReference Include="Microsoft.Azure.AppConfiguration.AspNetCore" />
   </ItemGroup>
 
   <ItemGroup>
